--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,17 +1,14 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"label": "Next.js: Start Dev Server",
-			"type": "shell",
-			"command": "npm",
-			"args": [
-				"run",
-				"dev"
-			],
-			"isBackground": true,
-			"problemMatcher": [],
-			"group": "build"
-		}
-	]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Next.js: Start Dev Server",
+      "type": "shell",
+      "command": "npm",
+      "args": ["run", "dev"],
+      "isBackground": true,
+      "problemMatcher": [],
+      "group": "build"
+    }
+  ]
 }
