--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "prettier": "^3.6.2",
