--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
     "@heroicons/react": "^2.2.0",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.19.2",
