--- a/.github/workflows/daily-accessibility-review.lock.yml
+++ b/.github/workflows/daily-accessibility-review.lock.yml
@@ -480,7 +480,7 @@ jobs:
               "playwright": {
                 "type": "stdio",
                 "container": "mcr.microsoft.com/playwright/mcp",
-                "args": ["--init", "--network", "host"],
+                "args": ["--network", "host"],
                 "entrypointArgs": ["--output-dir", "/tmp/gh-aw/mcp-logs/playwright", "--allowed-hosts", "localhost,localhost:*,127.0.0.1,127.0.0.1:*", "--allowed-origins", "localhost;localhost:*;127.0.0.1;127.0.0.1:*"],
                 "mounts": ["/tmp/gh-aw/mcp-logs:/tmp/gh-aw/mcp-logs:rw"]
               },
